--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -5,14 +5,14 @@
   }
 }
 
-@mixin onTablet {
-  @media (max-width: $tablet-max-width) {
+@mixin on-tablet {
+  @media (max-width: $t-max-width) {
     @content;
   }
 }
 
-@mixin onPhone {
-  @media (max-width: $mobile-max-width) {
+@mixin on-phone {
+  @media (max-width: $m-max-width) {
     @content;
   }
 }
