--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -2,10 +2,20 @@ $bg-color: #fff;
 $t-color: #0f0e08;
 $g-color: #1a5a4c;
 $e-color: #687480;
-$tablet-max-width: 1279px;
-$mobile-max-width: 670px;
+$t-max-width: 1279px;
+$m-max-width: 768px;
 $max-content-width: 1440px;
 $d-columns: 12;
 $t-columns: 6;
 $m-columns: 2;
 $g-gap: 30px;
+$aside-background: #1a5a4c;
+$d-padding: 55px;
+$t-padding: 34px;
+$m-padding: 0;
+$d-aside-height: 235px;
+$t-aside-height: 225px;
+$m-aside-height: 400px;
+$d-header-min-height: 655px;
+$t-header-min-height: 384px;
+$shedule-columns: 4;
