--- a/src/styles/utils/blocks/icon.scss
+++ b/src/styles/utils/blocks/icon.scss
@@ -3,16 +3,23 @@
   height: 24px;
   width: 24px;
 
-  &--menu {
+  &__block {
     position: absolute;
     top: 39px;
+  }
+
+  &--menu {
     background-image: url(../images/icon/burger-menu.svg);
+  }
+
+  &--close {
+    background-image: url(../images/icon/close.svg);
   }
 }
 
-@include onPhone {
+@include on-phone {
   .icon {
-    &--menu {
+    &__block {
       top: 27px;
       left: 20px;
     }
