--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,19 +1,16 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
+@import './utils/blocks/page';
 @import './utils/blocks/header';
 @import './utils/blocks/icon';
+@import './utils/blocks/menu';
+@import './utils/blocks/schedule';
 
 * {
   margin: 0;
   padding: 0;
   text-decoration: none;
   box-sizing: border-box;
-}
-
-body {
-  background: $bg-color;
-  font-family: Montserrat, Arial, sans-serif;
-  font-weight: 700;
-  color: $t-color;
+  list-style: none;
 }
