--- a/src/styles/utils/blocks/menu.scss
+++ b/src/styles/utils/blocks/menu.scss
@@ -39,6 +39,34 @@
     height: 145px;
     border-left: 1px solid #fff;
   }
+
+  &__schedule {
+    grid-column: 8 / 10;
+    width: max-content;
+  }
+
+  &__shedule-title {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    margin-bottom: 20px;
+  }
+
+  &__schedule-item {
+    font-weight: 400;
+  }
+
+  &__t-bold {
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 21px;
+  }
+
+  &__schedule-describe {
+    width: fit-content;
+    margin-top: 40px;
+    grid-column: 10 / 12;
+  }
 }
 
 @include on-tablet {
@@ -57,13 +85,21 @@
       grid-column: 6;
       margin-left: auto;
       margin-right: auto;
-
     }
 
     &__item {
       &:nth-child(odd) {
         padding-bottom: 24px;
       }
+    }
+
+    &__schedule {
+      grid-column: 7 / 9;
+    }
+
+    &__schedule-describe {
+      width: fit-content;
+      grid-column: 9 / -1;
     }
   }
 }
@@ -89,6 +125,16 @@
       width: 100%;
       height: 0;
       border-bottom: 1px solid #fff;
+      margin-bottom: 24px;
+    }
+
+    &__schedule {
+      grid-column: 1;
+    }
+
+    &__schedule-describe {
+      margin-top: 16px;
+      grid-column: 1 / -1;
     }
   }
 }
