--- a/src/styles/blocks.scss/footer.scss
+++ b/src/styles/blocks.scss/footer.scss
@@ -32,18 +32,18 @@
   }
 
   &__bottom {
+    margin-top: 0;
 
-    margin-top: -14px;
     @include on-tabl-desk {
       justify-content: left;
       position: absolute;
-      top: 380px;
-      left: 40px;
+      top: 390px;
+      left: 50px;
     }
 
     @include on-mob-tabl {
       position: relative;
-      top: 80px;
+      top: 60px;
       left: -110px;
     }
   }
@@ -56,7 +56,6 @@
     width: 170px;
     height: 72px;
 
-
     @include on-mob-tabl {
       position: absolute;
       top: -265px;
@@ -65,9 +64,9 @@
   }
 
   &__un {
+    width: 68px;
     position: relative;
     text-decoration: none;
-
 
     @include on-mob-tabl {
       position: relative;
@@ -81,6 +80,7 @@
   }
 
   &__menu {
+    box-sizing: border-box;
     display: flex;
     margin-left: 20px;
     margin-top: 15px;
@@ -93,9 +93,9 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      position: relative;
-      top: -270px;
-      left: -95px;
+      position: absolute;
+      top: -250px;
+      left: 15px;
     }
 
     &--contact {
@@ -110,7 +110,7 @@
         height: 210px;
         position: relative;
         top: 106px;
-        left: 170px;
+        left: 150px;
       }
 
       font-size: 14px;
@@ -149,7 +149,7 @@
         width: 130px;
         position: absolute;
         top: 250px;
-        left: 0;
+        left: 30px;
       }
     }
   }
@@ -171,9 +171,10 @@
 
     @include on-mob-tabl {
       transform: rotate(-90deg);
-      left: -55px;
+      left: -90px;
       top: 200px;
       height: 280px;
+      margin-bottom: 40px;
     }
   }
 }
@@ -217,6 +218,6 @@
     display: flex;
     flex-direction: column-reverse;
     text-align: center;
-    top: -100px;
+    top: 500px;
   }
 }
