--- a/src/styles/blocks.scss/mains.scss
+++ b/src/styles/blocks.scss/mains.scss
@@ -1,4 +1,6 @@
 .main {
+  box-sizing: border-box;
+
   @include on-mob-tabl {
     position: relative;
     top: -160px;
@@ -7,8 +9,8 @@
 
 .events {
   margin: 0 auto;
-padding: 0 55px;
-max-width: 1280px;
+  padding: 0 55px;
+  max-width: 1280px;
 
   @include on-tabl-desk {
     padding-left: 34px;
@@ -40,29 +42,38 @@ max-width: 1280px;
 }
 
 .events__one {
-  @include on-desktop{
+  @include on-desktop {
     position: relative;
     top: -10vh;
   }
+
   @include on-tabl-desk {
     width: 460px;
     height: 177px;
+  }
+
+  @include on-mob-tabl {
+    margin-bottom: 60px;
   }
 }
 
 .events__two {
-  @include on-desktop{
+  @include on-desktop {
     position: relative;
     top: -10vh;
   }
+
   @include on-tabl-desk {
     width: 460px;
     height: 177px;
   }
+
+  @include on-mob-tabl {
+    margin-bottom: 60px;
+  }
 }
 
 .events__collection {
-
   display: flex;
   align-items: center;
   justify-content: left;
@@ -95,11 +106,11 @@ max-width: 1280px;
     &--about--up {
       width: 570px;
       height: 204px;
+
       @include on-mob-tabl {
         width: 280px;
         height: 140px;
       }
-
     }
   }
 
@@ -228,8 +239,6 @@ max-width: 1280px;
   }
 
   &--subscript {
-
-
     top: 163px;
 
     @include on-tabl-desk {
@@ -256,6 +265,7 @@ max-width: 1280px;
 
   &--subscript1 {
     margin: 0;
+
     @include on-tabl-desk {
       margin: 0;
     }
@@ -285,13 +295,12 @@ max-width: 1280px;
     font-family: 'IBM Plex Sans', sans-serif;
     font-size: 18px;
     font-weight: 400;
-    line-height: 0px;
     line-height: 18px;
     margin-bottom: 46px;
 
     @include on-tabl-desk {
       line-height: 18px;
- margin-bottom: 46px;
+      margin-bottom: 46px;
     }
 
     @include on-mob-tabl {
@@ -303,7 +312,6 @@ max-width: 1280px;
 .events__collection--cover {
   width: 100%;
   justify-content: center;
-
 
   @include on-tabl-desk {
     padding-right: 34px;
@@ -320,7 +328,7 @@ max-width: 1280px;
 }
 
 .events__collection--cover--down {
-width: 100%;
+  width: 100%;
   height: 550px;
   position: absolute;
 
@@ -353,19 +361,11 @@ width: 100%;
   }
 }
 
-
-
-
-
-
-
 .search-form__container {
-
   font-family: Montserrat, sans-serif;
-font-size: 14px;
-line-height: 14px;
-text-align: left;
-
+  font-size: 14px;
+  line-height: 14px;
+  text-align: left;
 }
 
 .search-form__container::before {
@@ -376,7 +376,6 @@ text-align: left;
 }
 
 .search-form__field {
-
   padding-left: 32px;
   width: 470px;
   height: 70px;
@@ -412,21 +411,23 @@ text-align: left;
   outline: none;
 }
 
-.search-form{
-display: flex;
-gap: 30px;
-justify-content: center;
-@include on-mob-tabl{
-  gap: 0;
-}
-@include on-tabl-desk{
-  gap: 16px;
-}
+.search-form {
+  display: flex;
+  gap: 30px;
+  justify-content: center;
+
+  @include on-mob-tabl {
+    gap: 0;
+  }
+
+  @include on-tabl-desk {
+    gap: 16px;
+  }
 }
 
-.search-form__button{
-  @include on-mob-tabl{
-width: 50px;
-height: 50px;
-}
+.search-form__button {
+  @include on-mob-tabl {
+    width: 50px;
+    height: 50px;
+  }
 }
