--- a/src/styles/blocks.scss/menu.scss
+++ b/src/styles/blocks.scss/menu.scss
@@ -7,6 +7,12 @@
   color: #fff;
   text-decoration: none;
 
+  @include on-mob-tabl {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 16px;
+  }
+
   @include on-tabl-desk {
     font-size: 16px;
     line-height: 16px;
@@ -15,10 +21,15 @@
 
 .nav__list {
   list-style: none;
+  margin: 0;
 }
 
 .nav__item {
   margin-bottom: 30px;
+
+  @include on-mob-tabl {
+    margin-bottom: 20px;
+  }
 }
 
 .menu2 {
@@ -44,6 +55,7 @@
   @include on-tabl-desk {
     padding-left: 34px;
   }
+
   box-sizing: border-box;
   padding-left: 55px;
   width: 100%;
@@ -64,12 +76,16 @@
     flex-direction: column;
     justify-content: space-between;
     height: 399px;
+    align-items: flex-start;
   }
 
   &__content {
-    margin-bottom: 10px;
-   width: 1280px;
+    margin-top: 27px;
+
     @include on-mob-tabl {
+      font-size: 16px;
+      font-weight: 500;
+      line-height: 16px;
       position: relative;
       left: -15vh;
     }
@@ -98,6 +114,11 @@
         left: 170px;
         top: 35px;
       }
+
+      @include on-mob-tabl {
+        position: relative;
+        left: -70px;
+      }
     }
 
     justify-content: center;
@@ -111,6 +132,10 @@
       height: 72px;
     }
 
+    @include on-mob-tabl {
+      margin-left: 72px;
+    }
+
     &--bold {
       font-weight: 600;
     }
@@ -121,6 +146,7 @@
 
     @include on-mob-tabl {
       margin-bottom: 0;
+      justify-content: start;
     }
 
     &--c1 {
@@ -175,8 +201,13 @@
     }
 
     @include on-mob-tabl {
-      position: relative;
-      left: -22vh;
+      width: 280px;
+      height: 145px;
+      margin-left: -30px;
+
+      margin-bottom: 16px;
+
+      left: -20vh;
       top: -1vh;
     }
   }
@@ -201,11 +232,12 @@
     }
 
     @include on-mob-tabl {
-      position: relative;
-      left: -5vh;
+      left: 2vh;
       top: 0;
       width: 280px;
       height: 63px;
+      margin-left: -30px;
+      margin-bottom: 27px;
     }
   }
 }
@@ -230,6 +262,7 @@
       opacity: 1;
       transform: translateY(0);
       pointer-events: all;
+      z-index: 1;
     }
   }
 }
@@ -237,7 +270,7 @@
 .menu__hr {
   position: relative;
   left: 48px;
-  border: 1px solid #fff;
+
   width: 145px;
   transform: rotate(-90deg);
 
@@ -248,8 +281,8 @@
 
   @include on-mob-tabl {
     transform: rotate(0deg);
-    width: 50vh;
-    position: relative;
-    left: -10vh;
+    width: 100%;
+
+    left: -4vh;
   }
 }
