--- a/src/styles/blocks.scss/slider.scss
+++ b/src/styles/blocks.scss/slider.scss
@@ -6,12 +6,17 @@
 }
 
 .gallery {
+  box-sizing: border-box;
   padding-left: 34px;
   margin-top: 88px;
   margin-bottom: 133px;
 
   @include on-desktop {
     display: none;
+  }
+
+  @include on-mob-tabl {
+    margin-top: 40px;
   }
 }
 
