--- a/src/styles/blocks.scss/header.scss
+++ b/src/styles/blocks.scss/header.scss
@@ -1,59 +1,52 @@
-.scale{
-  @include on-desktop{
-  margin: 0 auto;
-padding: 0 55px;
-max-width: 1280px;
-}
+.scale {
+  @include on-desktop {
+    margin: 0 auto;
+    padding: 0 55px;
+    max-width: 1280px;
+  }
 }
 
-.scale1{
+.scale1 {
   margin: 0 auto;
   max-width: 1280px;
 }
 
-.scale2{
-@include on-desktop{
-  //margin-left: auto;
-  //margin-right: auto;
-  max-width: 1280px;
-
-}
-}
-
-.scale3{
-  @include on-desktop{
-
+.scale2 {
+  @include on-desktop {
+    // margin-left: auto;
+    // margin-right: auto;
+    max-width: 1280px;
   }
+}
+
+// .scale3{
+// @include on-desktop{
+// }
+// }
+
+.had {
+  // width: 100vh;
+  // height: 100vh;
+  @include on-desktop {
+    margin: 0 auto;
+    max-width: 1280px;
+    position: relative;
+    display: grid;
+    column-gap: 30px;
+    grid-template-columns: repeat(12, 1fr);
   }
 
-.had{
- // width: 100vh;
- // height: 100vh;
- @include on-desktop{
- margin: 0 auto;
- max-width: 1280px;
- position: relative;
- display: grid;
-  column-gap: 30px;
-  grid-template-columns: repeat(12, 1fr);
- }
- @include on-tabl-desk{
-  margin: 0 auto;
-
-
- }
-
+  @include on-tabl-desk {
+    margin: 0 auto;
+  }
 }
 
 .header {
-
   box-sizing: border-box;
   padding-left: 55px;
 
-
   @include on-tabl-desk {
     padding-left: 34px;
-
   }
 
   @include on-mob-tabl {
@@ -87,9 +80,8 @@ max-width: 1280px;
 }
 
 .header__all {
-  margin-bottom: 200px;
-  height: 100vh;
-
+  margin-bottom: 200;
+  height: 655px;
 
   @include on-tabl-desk {
     margin-bottom: 0;
@@ -171,7 +163,7 @@ max-width: 1280px;
     @include on-tabl-desk {
       position: absolute;
       left: 74px;
-      top: 0px;
+      top: 0;
       grid-column: 1/3;
     }
 
@@ -192,9 +184,10 @@ max-width: 1280px;
     }
 
     @include on-mob-tabl {
-      width: 280px;
-      height: 67px;
-      position: absolute;
+      width: 100vh;
+      height: 50px;
+      position: relative;
+      left: 0%;
     }
   }
 
@@ -223,12 +216,11 @@ max-width: 1280px;
   @include on-tabl-desk {
     display: none;
   }
-position: absolute;
 
+  position: absolute;
 
   top: 575px;
-  left:-55px;
-
+  left: -55px;
 
   font-family: 'IBM Plex Sans', sans-serif;
   font-size: 14px;
@@ -240,16 +232,13 @@ position: absolute;
   display: flex;
   gap: 20px;
 
-
   &__border {
     border-left: 70px solid #687480;
     margin-top: 13px;
     height: 1px;
-
   }
 
   transform: rotate(-90deg);
-
 }
 
 .icon {
@@ -269,10 +258,9 @@ position: absolute;
       left: 20px;
     }
 
-    @include on-mob-tabl{
+    @include on-mob-tabl {
       z-index: 1;
-      margin-top: 0px;
-
+      margin-top: 0;
     }
 
     &:hover {
@@ -283,8 +271,12 @@ position: absolute;
   &--close {
     @include on-mob-tabl {
       position: absolute;
+      width: 24px;
+      height: 24px;
       left: 20px;
       top: 27px;
+      display: block;
+      z-index: 1;
     }
 
     position: relative;
