--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,10 @@
+$c-white: #fff;
 $c-gray: #eee;
+$c-dark-gray: #4e4e4e;
+$c-green: #1a5a4c;
+$c-orange: #f14a27;
+$c-light-gray: #687480;
+$mobile-min-width: 320px;
+$tablet-min-width: 768px;
+$desktop-min-width: 1280px;
+$main-page-color: #fff;
