--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,14 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
-
-body {
-  background: $c-gray;
-}
+@import './blocks/page';
+@import './blocks/header';
+@import './blocks/icons';
+@import './blocks/aside';
+@import './blocks/events';
+@import './blocks/exibition';
+@import './blocks/lecture';
+@import './blocks/gallery';
+@import './blocks/slider';
+@import './blocks/subscription';
+@import './blocks/footer';
