--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -98,6 +98,10 @@
             font-size: 22px;
             line-height: 22px;
           }
+
+          &:hover {
+            color: $c-green;
+          }
         }
       }
     }
@@ -148,10 +152,16 @@
         &-link {
           text-decoration: none;
           color: #000;
+
+          &:hover {
+            color: $c-green;
+          }
         }
 
         &-swipe {
           margin: 70px 0 0 70px;
+
+          @include hover(scale, 1.1);
 
           @include on-tablet {
             display: none;
