--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -70,36 +70,38 @@
   }
 }
 
-.radio:checked ~ .first {
-  margin-left: 0;
-}
-
-.radio:checked ~ .slide:nth-child(2) {
-  margin-left: -15%;
-}
-
-.radio:checked ~ .slide:nth-child(3) {
-  margin-left: -30%;
-}
-
-.radio:checked ~ .slide:nth-child(4) {
-  margin-left: -44%;
-}
-
-@include on-tablet {
-  .radio:checked ~ .first {
+@media (max-width: 767px) {
+  [id='radio1']:checked ~ .first {
     margin-left: 0;
   }
 
-  .radio:checked ~ .slide:nth-child(2) {
-    margin-left: -6%;
-  }
-
-  .radio:checked ~ .slide:nth-child(3) {
+  [id='radio2']:checked ~ .first {
     margin-left: -15%;
   }
 
-  .radio:checked ~ .slide:nth-child(4) {
+  [id='radio3']:checked ~ .first {
+    margin-left: -30%;
+  }
+
+  [id='radio4']:checked ~ .first {
+    margin-left: -44%;
+  }
+}
+
+@media (min-width: 768px) {
+  [id='radio1']:checked ~ .first {
+    margin-left: 0;
+  }
+
+  [id='radio2']:checked ~ .first {
+    margin-left: -6%;
+  }
+
+  [id='radio3']:checked ~ .first {
+    margin-left: -15%;
+  }
+
+  [id='radio4']:checked ~ .first {
     margin-left: -24%;
   }
 }
