--- a/src/styles/blocks/aside.scss
+++ b/src/styles/blocks/aside.scss
@@ -68,6 +68,10 @@
         &-link {
           text-decoration: none;
 
+          &:hover {
+            color: $c-light-gray;
+          }
+
           color: $c-white;
           font-family: 'IBM Plex Sans', sans-serif;
           font-size: 16px;
