--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -73,6 +73,7 @@
           }
 
           &-text::placeholder {
+            font-family: Montserrat, sans-serif;
             font-size: 14px;
             line-height: 14px;
             text-align: left;
