--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -49,13 +49,14 @@
 }
 
 .navigation {
+  position: absolute;
+
   &-container {
     display: flex;
-    width: 100vw;
     justify-content: center;
-
-    margin: 60px 0 0;
   }
+
+  margin: 30px 0 0;
 
   display: flex;
   justify-content: center;
