--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -51,6 +51,10 @@
 .navigation {
   position: absolute;
 
+  @include on-desktop {
+    visibility: hidden;
+  }
+
   &-container {
     display: flex;
     justify-content: center;
