some small changes

--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -50,9 +50,10 @@
 
 .navigation {
   position: absolute;
+  display: flex;
 
   @include on-desktop {
-    visibility: hidden;
+    display: none;
   }
 
   &-container {
