--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,7 @@
 @import './utils/blocks/icon';
 @import './utils/blocks/menu';
 @import './utils/blocks/schedule';
+@import './utils/blocks/performance';
 
 * {
   margin: 0;
