--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,7 +1,7 @@
 $bg-color: #fff;
 $t-color: #0f0e08;
 $g-color: #1a5a4c;
-$e-color: #687480;
+$grey-color: #687480;
 $t-max-width: 1279px;
 $m-max-width: 768px;
 $max-content-width: 1440px;
@@ -19,3 +19,9 @@ $m-aside-height: 400px;
 $d-header-min-height: 655px;
 $t-header-min-height: 384px;
 $shedule-columns: 4;
+$d-space-between-sections: 200px;
+$t-space-between-sections: 88px;
+$m-space-between-sections: 70px;
+$green-text: #1a5a4c;
+$rect-back: #f14a27;
+$details-text-color: #4e4e4e;
