--- a/src/styles/utils/blocks/page.scss
+++ b/src/styles/utils/blocks/page.scss
@@ -13,6 +13,12 @@
     padding-right: $d-padding;
   }
 
+  &__container {
+    margin: 0 auto;
+    padding-inline: 55px ;
+    max-width: 1440px;
+  }
+
   &__menu {
     position: fixed;
     top: 0;
@@ -40,6 +46,10 @@
     &__right-padding {
       padding-right: $t-padding;
     }
+
+    &__container {
+      padding-inline: 34px ;
+    }
   }
 }
 
@@ -51,6 +61,10 @@
 
     &__right-padding {
       padding: $m-padding;
+    }
+
+    &__container {
+      padding-inline: 20px ;
     }
   }
 }
