--- a/src/styles/utils/blocks/header.scss
+++ b/src/styles/utils/blocks/header.scss
@@ -3,7 +3,7 @@
     display: grid;
     grid-template-columns: repeat($d-columns, 1fr);
     gap: $g-gap;
-    margin: 0 auto;
+    margin: 0 auto $d-space-between-sections;
     position: relative;
     max-width: $max-content-width;
     min-height: $d-header-min-height;
@@ -73,7 +73,7 @@
   }
 
   &__e-text {
-    color: $e-color;
+    color: $grey-color;
     font-size: 14px;
   }
 
@@ -105,6 +105,7 @@
       min-height: $t-header-min-height;
       position: relative;
       grid-template-columns: repeat($t-columns, 1fr);
+      margin-bottom: $t-space-between-sections;
     }
 
     &__l-container {
@@ -140,6 +141,7 @@
   .header {
     padding: 0;
     &__container {
+      margin-bottom: $m-space-between-sections;
       grid-template-columns: repeat($m-columns, 1fr);
       row-gap: 20px;
       grid-template-areas:
