--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,3 +1,62 @@
-h1 {
-  @extend %h1;
+.text-tiny {
+  @extend %text-tiny;
+  @extend %ibm-plex-sans;
+  @extend %color-dark-gray;
+}
+
+.text-normal {
+  @extend %text-normal;
+  @extend %ibm-plex-sans;
+}
+
+.text-normal-semibold {
+  @extend %text-normal-semibold;
+  @extend %ibm-plex-sans;
+}
+
+.text-normal-bold {
+  @extend %ibm-plex-sans;
+  @extend %text-normal-bold;
+}
+
+.text-hard-bold {
+  @extend %ibm-plex-sans;
+  @extend %text-hard-bold;
+}
+
+.header-1 {
+  @extend %header-1;
+  @extend %montserrat;
+}
+
+.header-2 {
+  @extend %header-2;
+  @extend %montserrat;
+}
+
+.header-3 {
+  @extend %header-3;
+  @extend %montserrat;
+}
+
+.header-4 {
+  @extend %header-4;
+  @extend %ibm-plex-sans;
+}
+
+.logo {
+  @extend %logo;
+  @extend %color-black;
+}
+
+.color--black {
+  @extend %color-black;
+}
+
+.color--white {
+  @extend %color-white;
+}
+
+.color--dark-grey {
+  @extend %color-dark-gray;
 }
