--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,122 @@
-%h1 {
-  font-family: Roboto, sans-serif;
+%montserrat {
+  font-family: Montserrat, sans-serif;
+}
+
+%ibm-plex-sans {
+  font-family: 'IBM Plex Sans', sans-serif;
+}
+
+%header-1 {
+  font-size: 45px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 100%;
+
+  text-align: center;
+
+  text-transform: uppercase;
+
+  @include on-tablet {
+    font-size: 54px;
+    line-height: 120%;
+  }
+
+  @include on-desktop {
+    font-size: 72px;
+  }
+}
+
+%header-2 {
+  text-align: center;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 100%;
+
+  @include on-tablet {
+    font-size: 48px;
+  }
+}
+
+%header-3 {
+  font-size: 28px;
+  font-style: normal;
   font-weight: 400;
+  line-height: 100%;
+
+  @include on-tablet {
+    font-size: 36px;
+  }
+}
+
+%header-4 {
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+
+  @include on-tablet {
+    line-height: 100%;
+  }
+}
+
+%text-tiny {
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 150%;
+}
+
+%text-normal {
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+}
+
+%text-normal-semibold {
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 100%;
+}
+
+%text-normal-bold {
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 150%;
+}
+
+%text-hard-bold {
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 150%;
+}
+
+%logo {
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 30px;
+  font-family: Montserrat, sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 100%;
+}
+
+%color-black {
+  color: $c-black;
+}
+
+%color-white {
+  color: $c-white;
+}
+
+%color-dark-gray {
+  color: $c-dark-gray;
+}
+
+%color-dark-green {
+  color: $c-green;
 }
