--- a/src/styles/blocks.scss/footer.scss
+++ b/src/styles/blocks.scss/footer.scss
@@ -188,6 +188,23 @@
 }
 
 .footer__link {
+  &__d {
+    font-family: 'IBM Plex Sans', sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 14px;
+    text-align: left;
+    color: black;
+  }
+  &__m {
+    font-family: 'IBM Plex Sans', sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 14px;
+    text-align: left;
+    color: black;
+  }
+
   font-family: 'IBM Plex Sans', sans-serif;
   font-size: 14px;
   font-weight: 400;
