--- a/src/styles/blocks.scss/mains.scss
+++ b/src/styles/blocks.scss/mains.scss
@@ -7,6 +7,16 @@
   }
 }
 
+.subscript {
+  @include on-tabl-desk {
+    margin-top: 92px;
+  }
+
+  @include on-mob-tabl {
+    margin-top: 100px;
+  }
+}
+
 .events {
   margin: 0 auto;
   padding: 0 55px;
@@ -74,6 +84,7 @@
 }
 
 .events__collection {
+  box-sizing: border-box;
   display: flex;
   align-items: center;
   justify-content: left;
@@ -219,22 +230,22 @@
   &--about--up {
     box-shadow: 0 2px 0 0 #1a5a4c40;
     background-color: #fff;
-    position: absolute;
     width: 570px;
     height: 204px;
-    margin-top: 40%;
-    margin-left: 27.73%;
+    position: absolute;
+    margin: auto;
+    left: 0;
+    right: 0;
+    margin-top: 42%;
 
     @include on-tabl-desk {
-      margin-top: 33%;
-      margin-left: 5%;
+      margin-top: 35%;
     }
 
     @include on-mob-tabl {
-      width: 87%;
+      width: 280px;
       height: 140px;
-      margin-top: 150px;
-      margin-left: 0;
+      margin-top: 30%;
     }
   }
 
@@ -312,6 +323,7 @@
 .events__collection--cover {
   width: 100%;
   justify-content: center;
+  position: relative;
 
   @include on-tabl-desk {
     padding-right: 34px;
@@ -426,6 +438,12 @@
 }
 
 .search-form__button {
+  background-image: url(../images/Group\ 57.png);
+  background-size: cover;
+  background-position: center;
+  width: 70px;
+  height: 70px;
+
   @include on-mob-tabl {
     width: 50px;
     height: 50px;
