--- a/src/styles/blocks.scss/menu.scss
+++ b/src/styles/blocks.scss/menu.scss
@@ -1,3 +1,46 @@
+.nav__link__d {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-size: 22px;
+  font-weight: 500;
+  line-height: 22px;
+  text-align: left;
+  color: #fff;
+  text-decoration: none;
+
+  @include on-mob-tabl {
+    display: none;
+  }
+
+  @include on-tabl-desk {
+    display: none;
+  }
+}
+
+.nav__link__m {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-size: 22px;
+  font-weight: 500;
+  line-height: 22px;
+  text-align: left;
+  color: #fff;
+  text-decoration: none;
+
+  @include on-mob-tabl {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 16px;
+  }
+
+  @include on-tabl-desk {
+    font-size: 16px;
+    line-height: 16px;
+  }
+
+  @include on-desktop {
+    display: none;
+  }
+}
+
 .nav__link {
   font-family: 'IBM Plex Sans', sans-serif;
   font-size: 22px;
@@ -80,7 +123,7 @@
   }
 
   &__content {
-    margin-top: 27px;
+    margin-top: -50px;
 
     @include on-mob-tabl {
       font-size: 16px;
@@ -88,6 +131,7 @@
       line-height: 16px;
       position: relative;
       left: -15vh;
+      margin-top: 30px;
     }
 
     &--c1 {
@@ -216,8 +260,9 @@
     margin-right: 155px;
     width: 170px;
     height: 105px;
-    top: 80px;
-    left: 955px;
+    position: relative;
+    top: 22px;
+    left: 0;
     font-size: 14px;
     font-weight: 400;
     line-height: 21px;
@@ -232,7 +277,7 @@
     }
 
     @include on-mob-tabl {
-      left: 2vh;
+      left: 0;
       top: 0;
       width: 280px;
       height: 63px;
@@ -264,6 +309,9 @@
       pointer-events: all;
       z-index: 1;
     }
+  }
+  &:has(.page__menu:target) {
+    overflow: hidden;
   }
 }
 
