--- a/src/styles/blocks.scss/galery.scss
+++ b/src/styles/blocks.scss/galery.scss
@@ -48,7 +48,8 @@
 
     @include on-tabl-desk {
       margin-left: 34px;
-      margin-top: 208px;
+      margin-top: 88px;
+      margin-bottom: 48px;
     }
 
     @include on-desktop {
@@ -56,8 +57,9 @@
     }
 
     @include on-mob-tabl {
-      margin-top: 183px;
+      margin-top: 40px;
       text-align: center;
+      margin-bottom: 48px;
     }
   }
 
