--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,16 @@
 @import './blocks.scss/footer';
 @import './blocks.scss/slider';
 
+html {
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+  scrollbar-width: none;
+
+  &:has(.page__menu:target) {
+    overflow: hidden;
+  }
+}
+
 body {
   margin: 0;
   background: $c-gray;
