--- a/src/styles/blocks.scss/footer.scss
+++ b/src/styles/blocks.scss/footer.scss
@@ -14,7 +14,7 @@
     margin-top: 70px;
   }
 
-  padding-left: 55px;
+  
   box-sizing: border-box;
   font-family: 'IBM Plex Sans', sans-serif;
   font-size: 14px;
@@ -29,6 +29,10 @@
   @include on-tabl-desk {
     height: 657px;
     top: 150px;
+  }
+
+  @include on-desktop{
+    padding-left: 55px;
   }
 
   &__bottom {
