panorama-mobile-test

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,7 +6,8 @@
 @import './utils/blocks/icon';
 @import './utils/blocks/menu';
 @import './utils/blocks/schedule';
-@import './utils/blocks/performance';
+@import './utils/blocks/performances';
+@import './utils/blocks/panorama';
 
 * {
   margin: 0;
