--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -2,6 +2,7 @@ $bg-color: #fff;
 $t-color: #0f0e08;
 $g-color: #1a5a4c;
 $grey-color: #687480;
+$max-content: 1440px;
 $t-max-width: 1279px;
 $m-max-width: 768px;
 $max-content-width: 1440px;
@@ -12,7 +13,8 @@ $g-gap: 30px;
 $aside-background: #1a5a4c;
 $d-padding: 55px;
 $t-padding: 34px;
-$m-padding: 0;
+$m-padding-no-space: 0;
+$m-padding: 20px;
 $d-aside-height: 235px;
 $t-aside-height: 225px;
 $m-aside-height: 400px;
@@ -22,6 +24,8 @@ $shedule-columns: 4;
 $d-space-between-sections: 200px;
 $t-space-between-sections: 88px;
 $m-space-between-sections: 70px;
+$m-space-between-sections-panoram: 100px;
 $green-text: #1a5a4c;
 $rect-back: #f14a27;
 $details-text-color: #4e4e4e;
+$box-shadow-color: #1a5a4c40;
