--- a/src/styles/utils/blocks/menu.scss
+++ b/src/styles/utils/blocks/menu.scss
@@ -4,8 +4,7 @@
   background: $aside-background;
 
   &__grid-wrapper {
-    max-width: $max-content-width;
-    margin: 0 auto;
+    @extend %max-content;
 
     display: grid;
     grid-template-columns: repeat($d-columns, 1fr);
@@ -107,7 +106,6 @@
 @include on-phone {
   .menu {
     height: $m-aside-height;
-    padding-inline: 20px;
     &__nav {
       margin-left: 52px;
       grid-column: 1 / -1;
