--- a/src/styles/utils/blocks/page.scss
+++ b/src/styles/utils/blocks/page.scss
@@ -6,17 +6,15 @@
   scroll-behavior: smooth;
 
   &__left-padding {
+    @extend %max-content;
+
     padding-left: $d-padding;
   }
 
-  &__right-padding {
-    padding-right: $d-padding;
-  }
-
   &__container {
-    margin: 0 auto;
-    padding-inline: 55px ;
-    max-width: 1440px;
+    @extend %max-content;
+
+    padding-inline: $d-padding;
   }
 
   &__menu {
@@ -43,12 +41,8 @@
       padding-left: $t-padding;
     }
 
-    &__right-padding {
-      padding-right: $t-padding;
-    }
-
     &__container {
-      padding-inline: 34px ;
+      padding-inline: $t-padding;
     }
   }
 }
@@ -56,15 +50,11 @@
 @include on-phone {
   .page {
     &__left-padding {
-      padding: $m-padding;
-    }
-
-    &__right-padding {
-      padding: $m-padding;
+      padding: $m-padding-no-space;
     }
 
     &__container {
-      padding-inline: 20px ;
+      padding-inline: 20px;
     }
   }
 }
