--- a/src/styles/utils/blocks/performances.scss
+++ b/src/styles/utils/blocks/performances.scss
@@ -15,7 +15,8 @@
   &__image {
     grid-column: 1 / 8;
     width: 100%;
-    margin-bottom: 40px;
+    max-height: 520px;
+
   }
 
   &__description {
@@ -29,6 +30,7 @@
     line-height: 14px;
     color: $grey-color;
     padding-bottom: 30px;
+    text-transform: uppercase;
   }
 
   &__hightlight-text {
@@ -76,8 +78,9 @@
     }
 
     &__image {
+      margin-bottom: 40px;
       grid-column: 1 / -1;
-      aspect-ratio: 1;
+      max-height: 100%;
     }
 
     &__description {
