--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -71,7 +71,7 @@
 
     &:hover &__icon {
       background-color: $c-white;
-      background-image: url(/src/images/icons/arrow-green.svg);
+      background-image: url(../images/icons/arrow-green.svg);
     }
   }
 }
