--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,4 +1,3 @@
-
 .header {
   width: 100%;
   margin-bottom: 70px;
@@ -15,11 +14,11 @@
   }
 
   &__content {
-    @include page-grid;
-
     justify-content: center;
     position: relative;
     gap: 20px;
+
+    @include page-grid;
 
     @include on-tablet {
       row-gap: 40px;
@@ -91,7 +90,7 @@
 
     @include on-desktop {
       grid-row: 1 / span 6;
-      grid-column: 6 / span 7 ;
+      grid-column: 6 / span 7;
       margin: 0;
       max-height: 655px;
       object-position: -50% 80%;
@@ -121,7 +120,7 @@
       &::before {
         display: inline-block;
         margin-bottom: 20px;
-        content: "";
+        content: '';
         width: 1px;
         height: 70px;
         background-color: $c-green;
