--- a/src/styles/blocks/swiper.scss
+++ b/src/styles/blocks/swiper.scss
@@ -7,10 +7,9 @@
   overflow: hidden visible;
   list-style: none;
   padding: 0;
+  row-gap: 20px;
 
   @include page-grid;
-
-  row-gap: 20px;
 
   @include on-tablet {
     row-gap: 32px;
@@ -47,41 +46,38 @@
 .slide-image {
   width: 100%;
   min-height: 410px;
+  transition: all, $transition-speed;
+  background-position: 50% 0;
+  background-size: cover;
+  background-repeat: no-repeat;
 
   @include on-tablet {
     min-height: 540px;
   }
 
-  transition: all, $transition-speed;
-
-  background-position: 50% 0;
-
   @include on-desktop {
     background-position: center;
   }
 
-  background-size: cover;
-  background-repeat: no-repeat;
-
   &--bg--1 {
-    background-image: url(/src/images/paintings/girl.png);
+    background-image: url(../images/paintings/girl.png);
   }
   &--bg--2 {
-    background-image: url(/src/images/paintings/gooses.png);
+    background-image: url(../images/paintings/gooses.png);
 
     @include on-desktop {
-      background-image: url(/src/images/paintings/winter.png);
+      background-image: url(../images/paintings/winter.png);
     }
   }
   &--bg--3 {
-    background-image: url(/src/images/paintings/winter.png);
+    background-image: url(../images/paintings/winter.png);
 
     @include on-desktop {
-      background-image: url(/src/images/paintings/park.png);
+      background-image: url(../images/paintings/park.png);
     }
   }
   &--bg--4 {
-    background-image: url(/src/images/paintings/sea.png);
+    background-image: url(../images/paintings/sea.png);
   }
 
   &--layout--rectangle {
@@ -102,7 +98,6 @@
     }
   }
 }
-
 
 .swiper-pagination {
   grid-column: 1 / -1;
