--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -6,31 +6,31 @@
   }
 }
 
-@mixin on-mobile {
+@mixin on-mobile() {
   @media (min-width: $mobile-min-width) {
     @content;
   }
 }
 
-@mixin on-tablet {
+@mixin on-tablet() {
   @media (min-width: $tablet-min-width) {
     @content;
   }
 }
 
-@mixin on-desktop {
+@mixin on-desktop() {
   @media (min-width: $desktop-min-width) {
     @content;
   }
 }
 
-@mixin on-design {
+@mixin on-design() {
   @media (min-width: $design-min-width) {
     @content;
   }
 }
 
-@mixin content-padding-inline {
+@mixin content-padding-inline() {
   padding-inline: 20px;
 
   @include on-tablet {
@@ -43,7 +43,7 @@
 
 }
 
-@mixin page-grid {
+@mixin page-grid() {
   --columns: 2;
 
   display: grid;
