--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -6,12 +6,11 @@
   }
 
   &__wrapper {
-    @include page-grid;
-
     row-gap: 20px;
     margin-bottom: 18px;
-
     padding-block: 88px;
+
+    @include page-grid;
 
     @include on-tablet {
       padding-block: 82px;
@@ -26,7 +25,6 @@
       max-width: $design-min-width;
       margin-inline: auto;
     }
-
   }
   &__header {
     color: $c-white;
@@ -53,8 +51,6 @@
     @include on-desktop {
       grid-column: 4 / span 6;
       margin-top: 52px;
-
-      // max-width: 20%;
     }
   }
 
@@ -145,7 +141,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    background-image: url(/src/images/scientists.png);
+    background-image: url(../images/scientists.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
