--- a/src/styles/sign-up.scss
+++ b/src/styles/sign-up.scss
@@ -1,4 +1,5 @@
 .sign-up {
+  margin-top: 100px;
   position: relative;
 
   &-link {
@@ -14,14 +15,25 @@
     }
   }
 
+  &-title {
+    margin: 0;
+    font-family: Montserrat;
+    font-size: 36px;
+    font-weight: 700;
+    text-align: center;
+    color: #FFFFFF;
+  }
+
+  &-description {
+    margin-top: 20px;
+    font-family: IBM Plex Sans;
+    font-size: 18px;
+    text-align: center;
+    color: #FFFFFF;
+  }
+
   &-contact-form {
-    // position: absolute;
-    // bottom: 20px; // Задайте потрібні відступи
-    // left: 50%;
-    // transform: translateX(-50%);
-    width: 100%;
-    // display: flex;
-    // justify-content: center;
+
 
     &-email {
       width: 230px;
@@ -51,12 +63,17 @@
   }
 }
 
-.container-for-form {
+.container-for-form-and-square {
+  margin-top: 50px;
   display: flex;
   // flex-direction: row;
   gap: 0;
   align-items: center;
   justify-content: center;
+
+}
+
+.container-for-all-form {
   position: absolute;
   bottom: 88px;
   left: 50%;
