fix links and cursor

--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -37,9 +37,10 @@
     &__text {
       display: flex;
       justify-content: center;
+      font-weight: 500;
       align-items: center;
       flex: 1;
-      color: $c-green;
+      color: $c-black;
     }
 
     &__icon {
@@ -71,7 +72,7 @@
 
     &:hover &__icon {
       background-color: $c-white;
-      background-image: url(../images/icons/arrow-green.svg);
+      background-image: url(../images/icons/arrow-black.svg);
     }
   }
 }
