--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -129,6 +129,7 @@
       }
 
       &--type--submit {
+        cursor: pointer;
         &:hover {
           background-color: $c-white;
           border: 1px solid $c-red;
