--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -130,6 +130,9 @@
 
       &--type--submit {
         cursor: pointer;
+        background-image: url('../images/icons/arrow-black.svg');
+        background-repeat: no-repeat;
+
         &:hover {
           background-color: $c-white;
           border: 1px solid $c-red;
