--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -128,12 +128,8 @@
         }
       }
 
-      &--type--submit {
+      &--type--surtin {
         cursor: pointer;
-        background-image: url('../images/icons/arrow-black.svg');
-        background-repeat: no-repeat;
-        z-index: +1;
-
         &:hover {
           background-color: $c-white;
           border: 1px solid $c-red;
