--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -128,11 +128,17 @@
         }
       }
 
-      &--type--surtin {
+      &--type--submit {
         cursor: pointer;
+        background-image: url('../images/icons/arrow-black-orange.png');
+        background-size: cover;
+        background-repeat: no-repeat;
         &:hover {
           background-color: $c-white;
           border: 1px solid $c-red;
+          background-image: url('../images/icons/arrow-orange-white.png');
+          background-size: cover;
+          background-repeat: no-repeat;
         }
       }
     }
