--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -133,12 +133,14 @@
         background-image: url('../images/icons/arrow-black-orange.png');
         background-size: cover;
         background-repeat: no-repeat;
+        z-index: +1;
         &:hover {
           background-color: $c-white;
           border: 1px solid $c-red;
           background-image: url('../images/icons/arrow-orange-white.png');
           background-size: cover;
           background-repeat: no-repeat;
+          z-index: +1;
         }
       }
     }
