--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -37,6 +37,7 @@
     &__text {
       display: flex;
       justify-content: center;
+      font-size: 16px;
       font-weight: 500;
       align-items: center;
       flex: 1;
